# vSMTP

./: .gitignore  AGENDA.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  PROJECT BACKLOG.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  deny.toml  release.toml
benchmarks/stress/: Cargo.toml  main.vsl  vsmtp.stress.toml
benchmarks/stress/src/: main.rs
fuzz/: Cargo.toml
src/vqueue/: Cargo.toml
src/vqueue/src/: args.rs  lib.rs  model.rs
src/vqueue/src/command/msg_command/: show.rs
src/vsmtp/vsmtp-common/: Cargo.toml
src/vsmtp/vsmtp-common/src/: event.rs  lib.rs  mail.rs  mail_context.rs  mechanism.rs  mime_type.rs  rcpt.rs  smtp.rs  status.rs  transfer.rs
src/vsmtp/vsmtp-common/src/tests/: event.rs
src/vsmtp/vsmtp-common/src/trait/: mail_parser.rs
src/vsmtp/vsmtp-common/src/type/: address.rs  codes_id.rs  reply.rs  reply_code.rs
src/vsmtp/vsmtp-config/: Cargo.toml
src/vsmtp/vsmtp-config/src/: config.rs  default.rs  lib.rs  rustls_helper.rs  trust_dns_helper.rs
src/vsmtp/vsmtp-config/src/builder/: validate.rs  wants.rs  with.rs
src/vsmtp/vsmtp-config/src/parser/: syst_user.rs  tls_cipher_suite.rs  tls_private_key.rs
src/vsmtp/vsmtp-config/src/tests/: mod.rs  validate.rs
src/vsmtp/vsmtp-delivery/: Cargo.toml
src/vsmtp/vsmtp-delivery/src/: lib.rs
src/vsmtp/vsmtp-mail-parser/: Cargo.toml
src/vsmtp/vsmtp-mail-parser/src/: lib.rs  parser.rs
src/vsmtp/vsmtp-rule-engine/: Cargo.toml
src/vsmtp/vsmtp-rule-engine/src/: rule_engine.rs  rule_state.rs
src/vsmtp/vsmtp-server/: Cargo.toml
src/vsmtp/vsmtp-server/benches/: receiver.rs
src/vsmtp/vsmtp-server/src/: auth.rs  lib.rs  runtime.rs  server.rs
src/vsmtp/vsmtp-test/: Cargo.toml
src/vsmtp/vsmtp-test/src/: config.rs  get_tls_file.rs  lib.rs  receiver.rs
vqueue/: Cargo.toml
vqueue/src/: command.rs  lib.rs  main.rs  model.rs
vqueue/src/command/: mod.rs  queue_show.rs
vqueue/src/command/msg_command/: move.rs  remove.rs  show.rs
vsmtp/: Cargo.toml
vsmtp-common/: Cargo.toml
vsmtp-common/src/: address.rs  code.rs  envelop.rs  event.rs  event_tests.rs  lib.rs  libc_abstraction.rs  mail.rs  mail_context.rs  mechanism.rs  mime_type.rs  queue.rs  rcpt.rs  smtp.rs  state.rs  status.rs  transfer.rs
vsmtp-common/src/tests/: event.rs  libc_abstraction.rs
vsmtp-common/src/trait/: mail_parser.rs
vsmtp-config/: Cargo.toml
vsmtp-config/src/: config.rs  config_builder.rs  default.rs  lib.rs  log4rs_helper.rs  parser.rs  rustls_helper.rs  serializer.rs  server_config.rs  service.rs  trust_dns_helper.rs
vsmtp-config/src/builder/: validate.rs  wants.rs  with.rs
vsmtp-config/src/parser/: semver.rs  socket_addr.rs  syst_group.rs  syst_user.rs  tls_certificate.rs  tls_cipher_suite.rs  tls_private_key.rs  tls_protocol_version.rs
vsmtp-config/src/tests/: mod.rs  socket_addr.rs  tls_protocol_version.rs  validate.rs
vsmtp-config/src/tests/root_example/: antivirus.rs  logging.rs  minimal.rs  secured.rs  simple.rs  tls.rs
vsmtp-delivery/: Cargo.toml
vsmtp-delivery/src/: lib.rs
vsmtp-delivery/src/transport/: deliver.rs  forward.rs  maildir.rs  mbox.rs
vsmtp-mail-parser/: Cargo.toml
vsmtp-mail-parser/src/: error.rs  helpers.rs  lib.rs  parser.rs
vsmtp-mail-parser/src/tests/: mod.rs
vsmtp-mail-parser/src/tests/mail/: buy-r__discussion_threads__54.eml
vsmtp-mail-parser/src/tests/mime_parser/: allen_p__discussion_threads__1.rs  methods.rs  mime1.rs
vsmtp-rule-engine/: Cargo.toml
vsmtp-rule-engine/src/: default_rules.rhai  error.rs  lib.rs  obj.rs  rule_engine.rs  rule_executor.rhai  rule_state.rs  server_api.rs  service.rs
vsmtp-rule-engine/src/api/: api.rhai  sys-api.rhai  utils.rhai
vsmtp-rule-engine/src/dsl/: action_parsing.rs  mod.rs  object_parsing.rs  rule_parsing.rs
vsmtp-rule-engine/src/dsl/action/: mod.rs
vsmtp-rule-engine/src/dsl/object/: mod.rs
vsmtp-rule-engine/src/dsl/service/: parsing.rs  shell.rs
vsmtp-rule-engine/src/modules/: actions.rs  mail_context.rs  mod.rs  types.rs
vsmtp-rule-engine/src/modules/actions/: bcc.rs  headers.rs  logging.rs  rule_state.rs  services.rs  transports.rs  utils.rs  write.rs
vsmtp-rule-engine/src/tests/: actions.rs  mod.rs  rules.rs
vsmtp-rule-engine/src/tests/actions/: mod.rs
vsmtp-rule-engine/src/tests/configs/: domains.txt  hosts.txt  whitelist.txt
vsmtp-rule-engine/src/tests/email/: main.vsl  mod.rs
vsmtp-rule-engine/src/tests/engine/: mod.rs
vsmtp-rule-engine/src/tests/rules/: mod.rs
vsmtp-rule-engine/src/tests/types/: mod.rs
vsmtp-server/: Cargo.toml
vsmtp-server/benches/: receiver.rs
vsmtp-server/src/: auth.rs  channel_message.rs  lib.rs  queue.rs  resolver.rs  runtime.rs  server.rs  tls_helpers.rs
vsmtp-server/src/processes/: delivery.rs  mime.rs  mod.rs  postq.rs
vsmtp-server/src/processes/delivery/: deferred.rs  deliver.rs
vsmtp-server/src/receiver/: auth.rs  auth_exchange.rs  connection.rs  io.rs  io_service.rs  mod.rs  test_helpers.rs  transaction.rs
vsmtp-server/src/receiver/tests/: clair.rs  mod.rs  rset.rs  starttls.rs  tls_tunneled.rs  utf8.rs
vsmtp-server/src/resolver/: maildir_resolver.rs  mbox_resolver.rs  smtp_resolver.rs
vsmtp-server/src/tests/: auth_ignored_test.rs  empty_main.vsl  mod.rs  start_server.rs
vsmtp-server/tests/: mod.rs
vsmtp-server/tests/stress/: listen_and_serve.rs  listen_and_serve_ignored_test.rs  send_payload_ignored_test.rs
vsmtp-test/: Cargo.toml
vsmtp-test/src/: config.rs  get_tls_file.rs  lib.rs  receiver.rs
vsmtp-test/src/template/certs/: private_key.ec256.key
vsmtp-test/src/tests/: auth.vsl  clair.rs  custom_codes.rs  custom_codes_deny.vsl  custom_codes_info.vsl  mod.rs  rset.rs  starttls.rs  tls_tunneled.rs  utf8.rs
vsmtp-test/src/tests/auth/: all_mechanism.rs  basic.rs  mod.rs  send_to_server.rs
vsmtp-test/src/tests/tls/: cipher_suite.rs  mod.rs  starttls.rs  tunneled.rs  tunneled_with_auth.rs
vsmtp-test/src/vsl/: sni.vsl
vsmtp/src/: args.rs  lib.rs  main.rs
vsmtp/src/resolver/: maildir_resolver.rs  mbox_resolver.rs  smtp_resolver.rs
vsmtp/tests/: mod.rs
vsmtp/tests/stress/: listen_and_serve.rs  trace.json
(+382 files in other folders)
