[package]
edition = "2021"

name = "vsmtp"
version = "0.8.8"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
log = "0.4.14"
log4rs = { version = "1.0.0" }

clap = { version = "3.1.0", features = ["derive"] }

# inactive since Oct. 2020
users = "0.11"
libc = "0.2.117"

anyhow = "1.0.53"

serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_with = { version = "1.12.0", features = ["macros"] }
humantime-serde = "1.0.1"

serde_json = "1.0.78"
toml = "0.5.8"

humantime = "2.1.0"

addr = { version = "0.15.3" }
regex = "1.5.4"
iprange = "0.6.7"
ipnet = "2.3.1"
chrono = "0.4.19"

rhai = { version = "1.4.1", features = ["unchecked", "sync", "internals"] }

# the 0.10 release is more stable than the 0.9 and enable async support.
lettre = { version = "0.10.0-rc.4", features = ["tracing"] }
trust-dns-resolver = "0.20.4"

async-trait = "0.1.52"
lazy_static = "1.4.0"
enum-iterator = "0.7.0"
diff = "0.1.12"
fastrand = "1.7.0"

rustls = { version = "0.20.3", features = ["tls12", "logging"] }
rustls-pemfile = "0.3.0"

tokio = { version = "1.16.1", features = [
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
    "rt-multi-thread",
] }

num_cpus = "1.13.1"
wait-timeout = "0.2.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio"] }
fork = "0.1.18"
rand = "0.8.4"
webpki-roots = "0.22.2"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }

[[bench]]
name = "receiver"
harness = false
