[workspace]
members = [
    "src/vqueue",
    "src/vsmtp",
    "src/vsmtp/vsmtp-common",
    "src/vsmtp/vsmtp-config",
    "src/vsmtp/vsmtp-delivery",
    "src/vsmtp/vsmtp-mail-parser",
    "src/vsmtp/vsmtp-rule-engine",
    "src/vsmtp/vsmtp-server",
    "src/vsmtp/vsmtp-test",
]

exclude = ["fuzz", "benchmarks/stress"]
