[package]
edition = "2021"

name = "vsmtp"
version = "1.0.1"
license = "GPL-3.0-only"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
readme = "README.md"
keywords = ["vsmtp"]
categories = ["email"]

rust-version = "1.58"
default-run = "vsmtp"

[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", prerelease = true },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", prerelease = true },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1, prerelease = true },
]

[workspace]
members = [
    "src/vqueue",
    "src/vsmtp/vsmtp-common",
    "src/vsmtp/vsmtp-config",
    "src/vsmtp/vsmtp-delivery",
    "src/vsmtp/vsmtp-mail-parser",
    "src/vsmtp/vsmtp-rule-engine",
    "src/vsmtp/vsmtp-server",
    "src/vsmtp/vsmtp-test",
]

exclude = ["fuzz", "benchmarks/stress"]

[[bin]]
name = "vsmtp"
path = "./src/vsmtp/src/main.rs"

[lib]
path = "./src/vsmtp/src/lib.rs"

[dependencies]
vsmtp-common = { path = "./src/vsmtp/vsmtp-common", version = "1.0.1" }
vsmtp-server = { path = "./src/vsmtp/vsmtp-server", version = "1.0.0-rc.1" }
vsmtp-config = { path = "./src/vsmtp/vsmtp-config", version = "1.0.0-rc.1" }

clap = { version = "3.1.18", features = ["derive"] }
diff = "0.1.12"

#
# DEBIAN PACKAGING
#
# Note that as the postinst script uses the adduser there's a
# dependency on the adduser package to keep the lintian tool happy.
#
[package.metadata.deb]
name = "vsmtp"
maintainer = "Pag <pag@viridit.com>"
copyright = "Copyright (c) 2022, viridIT SAS. All rights reserved."
extended-description = "A high performance MTA written in RUST."
# This is a fake changelog - must be generated by the (github) pkg workflow
changelog = "./tools/install/deb/changelog"
depends = "$auto, adduser"
section = "mail"
priority = "optional"
# TODO: recursive cp for example folders ?
assets = [
    [
        "target/release/vsmtp",
        "usr/sbin/",
        "755",
    ],
    [
        "target/release/vqueue",
        "usr/sbin/",
        "755",
    ],
    [
        "./tools/install/man/*",
        "usr/share/man/man1",
        "644",
    ],
    [
        "./README.md",
        "usr/share/doc/vsmtp/README",
        "644",
    ],
    [
        "./examples/vsl/actions/*",
        "usr/share/doc/vsmtp/vsl/actions/",
        "644",
    ],
    [
        "./examples/vsl/rules/*",
        "usr/share/doc/vsmtp/vsl/rules/",
        "644",
    ],
    [
        "./examples/config/*",
        "usr/share/doc/vsmtp/config/",
        "644",
    ],
    [
        "./examples/config/antivirus/*",
        "usr/share/doc/vsmtp/config/antivirus/",
        "644",
    ],
    [
        "./examples/config/auth/*",
        "usr/share/doc/vsmtp/config/auth/",
        "644",
    ],
    [
        "./examples/config/tls/*",
        "usr/share/doc/vsmtp/config/tls/",
        "644",
    ],
]
maintainer-scripts = "./tools/install/deb/"
systemd-units = { unit-name = "vsmtp", enable = true, start = false }

#
# RPM PACKAGING
#
