[package]
edition = "2021"

name = "vqueue"
version = "0.10.0"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vQUEUE : the vSMTP's queues mananger. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

rust-version = "1.58"

[dependencies]
vsmtp-common = { version = "^0.10", path = "../vsmtp-common" }
vsmtp-config = { version = "^0.10", path = "../vsmtp-config" }

clap = { version = "3.1.10", features = ["derive"] }
itertools = "0.10.3"
