[package]
edition = "2021"

name = "vsmtp-common"
version = "0.9.2"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
anyhow = "1.0.56"

users = { version = "0.11.0", features = [] }
libc = "0.2.109"

serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"

addr = { version = "0.15.3" }

strum = { version = "0.24.0", features = ["derive"] }

rsasl = { git = "https://github.com/viridIT/rsasl.git", branch = "fix/async" }
# rsasl = { path = "../../rsasl" }

base64 = "0.13.0"

[dev-dependencies]
serde_json = "1.0.79"
