[package]
edition = "2021"

name = "vsmtp-config"
version = "0.9.7"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { version = "^0.9", path = "../vsmtp-common" }

log4rs = { version = "1.0.0" }
users = { version = "0.11.0", features = [] }

serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
humantime-serde = "1.1.1"

toml = "0.5.9"

rustls = { version = "0.20.4", features = ["tls12", "logging"] }
rustls-pemfile = "1.0.0"

hostname = "0.3.1"
trust-dns-resolver = { version = "0.21.2", default-features = false, features = [
    "system-config",
    "serde-config",
    "tokio-runtime",
] }

semver = "1.0.7"

[dev-dependencies]
pretty_assertions = "1.2.1"
