[package]
edition = "2021"

name = "vsmtp-delivery"
version = "0.10.3"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { version = "^0.10", path = "../vsmtp-common" }
vsmtp-config = { version = "^0.10", path = "../vsmtp-config" }

async-trait = "0.1.53"

time = { version = "0.3.9", default-features = false, features = [
    "std",
    "formatting",
    "macros",
] }

users = { version = "0.11.0", features = [] }
trust-dns-resolver = { version = "0.21.2", features = [
    "dns-over-rustls",
    "dnssec-openssl",
] }
lettre = { version = "0.10.0-rc.6", default-features = false, features = [
    "smtp-transport",
    "pool",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
] }

tokio = { version = "1.18.0", default-features = false, features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.18.0", features = [
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
    "rt-multi-thread",
] }
