[package]
edition = "2021"

name = "vsmtp-mail-parser"
version = "0.10.2"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { version = "^0.10", path = "../vsmtp-common" }

[dev-dependencies]
pretty_assertions = "1.2.1"
