[package]
edition = "2021"

name = "vsmtp-rule-engine"
version = "0.10.3"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { version = "^0.10", path = "../vsmtp-common" }
vsmtp-config = { version = "^0.10", path = "../vsmtp-config" }

regex = "1.5.5"
iprange = "0.6.7"
ipnet = "2.5.0"
hostname = "0.3.1"

time = { version = "0.3.9", default-features = false, features = [
    "std",
    "formatting",
    "macros",
] }

rhai = { version = "1.6.1", features = ["unchecked", "sync", "internals"] }

lettre = { version = "0.10.0-rc.6", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
] }

tokio = { version = "1.18.0", features = [
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
    "rt-multi-thread",
] }

wait-timeout = "0.2.0"

[dev-dependencies]
vsmtp-mail-parser = { version = "^0.10", path = "../vsmtp-mail-parser" }
