[package]
edition = "2021"

name = "vsmtp-server"
version = "0.9.2"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { version = "^0.9", path = "../vsmtp-common" }
vsmtp-config = { version = "^0.9", path = "../vsmtp-config" }
vsmtp-rule-engine = { version = "^0.9", path = "../vsmtp-rule-engine" }
vsmtp-mail-parser = { version = "^0.9", path = "../vsmtp-mail-parser" }

log = "0.4.14"
anyhow = "1.0.56"

serde_json = "1.0.79"
async-trait = "0.1.52"
fastrand = "1.7.0"

rustls = { version = "0.20.4", features = ["tls12", "logging"] }
rustls-pemfile = "0.3.0"

tokio = { version = "1.17.0", features = [
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
    "rt-multi-thread",
] }

time = { version = "0.3.7", default-features = false, features = [
    "std",
    "formatting",
    "macros",
] }

lettre = { version = "0.10.0-rc.4", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
] }

trust-dns-resolver = "0.21.1"

users = { version = "0.11.0", features = [] }

num_cpus = "1.13.1"


## TODO: move in dev-deps ; Protocol
pretty_assertions = "1.2.0"

[dev-dependencies]
## Benchmark
criterion = { version = "0.3.5", features = ["async_tokio"] }

## Stress tests
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
lazy_static = "1.4.0"
log4rs = { version = "1.0.0" }


[[bench]]
name = "receiver"
harness = false
