[package]
edition = "2021"

name = "vsmtp-server"
version = "0.9.7"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { version = "^0.9", path = "../vsmtp-common" }
vsmtp-config = { version = "^0.9", path = "../vsmtp-config" }
vsmtp-rule-engine = { version = "^0.9", path = "../vsmtp-rule-engine" }
vsmtp-mail-parser = { version = "^0.9", path = "../vsmtp-mail-parser" }
vsmtp-delivery = { version = "^0.9", path = "../vsmtp-delivery" }

async-trait = "0.1.53"
fastrand = "1.7.0"

base64 = "0.13.0"

tokio = { version = "1.17.0", features = [
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
    "rt-multi-thread",
] }

trust-dns-resolver = "0.21.2"
time = { version = "0.3.9", default-features = false, features = [
    "std",
    "formatting",
    "macros",
] }

num_cpus = "1.13.1"

[dev-dependencies]
vsmtp-test = { version = "^0.9", path = "../vsmtp-test" }
pretty_assertions = "1.2.1"

## Benchmark
criterion = { version = "0.3.5", features = ["async_tokio"] }

## Stress tests
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "metrics"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
lazy_static = "1.4.0"
log4rs = { version = "1.0.0" }
lettre = { version = "0.10.0-rc.5", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
] }

[[bench]]
name = "receiver"
harness = false
