[package]
edition = "2021"

name = "vsmtp"
version = "0.9.7"
license = "GPLv3"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

rust-version = "1.58"

[dependencies]
vsmtp-common = { version = "^0.9", path = "../vsmtp-common" }
vsmtp-server = { version = "^0.9", path = "../vsmtp-server" }
vsmtp-config = { version = "^0.9", path = "../vsmtp-config" }

clap = { version = "3.1.9", features = ["derive"] }
diff = "0.1.12"
