[package]
edition = "2021"

name = "vsmtp"
version = "0.10.4"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP : the next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

default-run = "vsmtp"

[dependencies]
vsmtp-common = { version = "^0.10", path = "../vsmtp-common" }
vsmtp-server = { version = "^0.10", path = "../vsmtp-server" }
vsmtp-config = { version = "^0.10", path = "../vsmtp-config" }

clap = { version = "3.1.17", features = ["derive"] }
diff = "0.1.12"
