[package]
edition = "2021"

name = "vqueue"
version = "1.0.0"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "vSMTP's queues mananger. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
readme = "../../README.md"
keywords = ["vsmtp"]
categories = ["command-line-utilities"]

[dependencies]
vsmtp-common = { path = "../vsmtp/vsmtp-common", version = "1.0.0-rc.1" }
vsmtp-config = { path = "../vsmtp/vsmtp-config", version = "1.0.0-rc.1" }

clap = { version = "3.1.18", features = ["derive"] }
itertools = "0.10.3"

[dev-dependencies]
pretty_assertions = "1.2.1"
