[package]
edition = "2021"

name = "vsmtp-common"
version = "1.0.1"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["data-structures"]

[dependencies]
# Re-exported
anyhow = "1.0.57"
log = { version = "0.4.17", features = ["serde"] }
serde_json = "1.0.81"
addr = { version = "0.15.3" }
vsmtp-rsasl = { git = "https://github.com/viridIT/rsasl.git", branch = "fix/async", version = "1.5" }
strum = { version = "0.24.0", features = ["derive"] }
libc = "0.2.126"

serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.136"

base64 = "0.13.0"

[dev-dependencies]
users = { version = "0.11.0", features = [] }
pretty_assertions = "1.2.1"
