[package]
edition = "2021"

name = "vsmtp-config"
version = "1.0.0"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["data-structures"]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.0.0-rc.1" }

log4rs = { version = "1.1.1", default-features = false, features = [
    "rolling_file_appender",
    "compound_policy",
    "gzip",
    "fixed_window_roller",
    "size_trigger",
    "console_appender",
] }
users = { version = "0.11.0", features = [] }

serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.136"
humantime-serde = "1.1.1"

toml = "0.5.9"

rustls = { version = "0.20.6", features = ["tls12", "logging"] }
rustls-pemfile = "1.0.0"

hostname = "0.3.1"
trust-dns-resolver = { version = "0.21.2", default-features = false, features = [
    "system-config",
    "serde-config",
    "tokio-runtime",
] }

semver = "1.0.9"
serde_with = "1.13.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
vsmtp-test = { path = "../vsmtp-test" }
