[package]
edition = "2021"

name = "vsmtp-delivery"
version = "1.0.0"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { path = "../vsmtp-common" }
vsmtp-config = { path = "../vsmtp-config" }

async-trait = "0.1.53"

time = { version = "0.3.9", default-features = false, features = [
    "std",
    "formatting",
    "macros",
] }

users = { version = "0.11.0", features = [] }
trust-dns-resolver = { version = "0.21.2", features = [
    "dns-over-rustls",
    "dnssec-openssl",
] }
lettre = { version = "0.10.0-rc.6", default-features = false, features = [
    "smtp-transport",
    "pool",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
] }

tokio = { version = "1.18.2", default-features = false, features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.18.2", default-features = false, features = [
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
    "rt-multi-thread",
] }
