[package]
edition = "2021"

name = "vsmtp-mail-parser"
version = "1.0.0"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["email"]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.0.0-rc.1" }

[dev-dependencies]
pretty_assertions = "1.2.1"
