[package]
edition = "2021"

name = "vsmtp-rule-engine"
version = "1.0.0"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["config"]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.0.0-rc.1" }
vsmtp-config = { path = "../vsmtp-config", version = "1.0.0-rc.1" }

# objects
regex = "1.5.5"
iprange = "0.6.7"
ipnet = "2.5.0"
csv = "1.1"

hostname = "0.3.1"
time = { version = "0.3.9", default-features = false, features = [
    "std",
    "formatting",
    "macros",
] }

rhai = { version = "1.7.0", git = "https://github.com/schungx/rhai", rev = "b23d64bec02edf70b7dc1414b708e04b1c23582c", features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
] }

lettre = { version = "0.10.0-rc.6", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
] }

tokio = { version = "1.18.2", default-features = false, features = [
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
    "rt-multi-thread",
] }

wait-timeout = "0.2.0"

[dev-dependencies]
vsmtp-mail-parser = { path = "../vsmtp-mail-parser" }
