[package]
edition = "2021"

name = "vsmtp-test"
version = "1.0.1"
license = "GPL-3.0-only"

rust-version = "1.58"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.0.1" }
vsmtp-config = { path = "../vsmtp-config", version = "1.0.0-rc.1" }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", version = "1.0.0-rc.1" }
vsmtp-rule-engine = { path = "../vsmtp-rule-engine", version = "1.0.0-rc.1" }
vsmtp-server = { path = "../vsmtp-server", version = "1.0.0-rc.1" }

async-trait = "0.1.53"

pretty_assertions = "1.2.1"

lettre = { version = "0.10.0-rc.6", default-features = false, features = [
    "smtp-transport",
    "builder",
    "tokio1-rustls-tls",
    "tracing",
] }

tokio-rustls = "0.23.4"
